src/platform/forms/sass/_m-schemaform.scss
/* ... */
.schemaform-array-row-title:focus {
  @include focus-gold-light-outline;
  display: inline-block;
}

.schemaform-array-row {
  outline: none;
}

.schemaform-block-header {
  margin-bottom: 0.7em;
  > legend, > h5, > p {
    padding-bottom: 0 !important;
    margin-bottom: 0 !important;
  }
  > p {
    margin-top: 0;
  }
  > .schemaform-block-title + p {
    margin-top: 0.5em;
  }
}
.schemaform-block-title {
  font-family: $font-serif;
  font-size: 1.8rem;
}
.schemaform-block-subtitle {
  font-size: 1.5rem;
  font-weight: 700;
}

.schemaform-first-field {
  .schemaform-label, > .usa-input-error {
    margin-top: 0;
  }
}

legend.schemaform-label {
  font-weight: inherit;
  font-size: inherit;
  color: inherit;
  line-height: inherit;
  max-width: 46rem;
  padding-bottom: 0;
}

fieldset.schemaform-field-template {
  margin-top: 3rem;
  &.schemaform-first-field {
    margin-top: 0;
  }
}

.schemaform-warning-header {
  margin-top: 9px;
}

.schemaform-failure-alert {
  margin-bottom: 1.5em;
}

.schemaform-radio-indent {
  margin-left: 27px;
}

.schemaform-expandUnder-indent {
  margin-left: 29px;
}

.schemaform-currency-input .schemaform-widget-wrapper {
  position: relative;
  &:before {
    content: "$";
    display: block;
    position: absolute;
    top: 9px;
    left: 10px;
  }
  > input {
    padding-left: 25px !important;
  }
}

//duplicated from claims-status.scss
.help-talk {
  margin: 0.5em 0;
  padding: 0;
}

.help-phone-number {
  margin: 0.5em 0 2em;
}

.help-phone-number-link {
  font-weight: bold;
  text-decoration: none;
  margin: 0.5em 0;
  word-break: keep-all;
}

//duplicated/renamed from claims-status.scss
.help-footer-box {
  padding: 2em 0;
  @include media($medium-large-screen) {
    padding-top: 0.6em;
    // padding-left: inherit;
  }
}
//duplicated/renamed from claims-status.scss
.help-footer-box {
  padding-top: 0.3em;
}

//duplicated/renamed from claims-status.scss
.help-heading {
  border-bottom: 3px solid $color-primary;
  margin: 0.3em 0;
  font-size: 1.35em;
  line-height: 1.5;
  font-weight: bold;
}

.usa-button.schemaform-file-remove-button {
  width: auto;
}

.schemaform-file-list {
  list-style: none;
  padding-left: 0;
  > li {
    list-style: none;
  }
}

.usa-input-error .schemaform-upload-label {
  margin-top: 0.5em;
}

.schemaform-file-upload > div > .schemaform-label {
  font-weight: bold;
}

.schemaform-file-error.usa-input-error {
  // border size is 4px
  right: 4px;
  width: calc(100% + 4px);
  margin-top: inherit;
}

legend.schemaform-label.schemaform-file-label {
  font-weight: bold;
}

.schemaform-file-attachment {
  margin-top: 1em;
  margin-bottom: 1em;
  .usa-input-error {
    margin-top: 0;
  }
}

.schemaform-file-list-buttons-editing > .usa-button {
  margin: 0.5em 0.5em 0.5em 0;
}

.schemaform-file-upload-review {
  margin-bottom: 1.5em;
}

.va-growable-background:focus {
  outline: none;
}

.schemaform-save-error {
  margin-top: 0;
  margin-bottom: 1em;
}

.schemaform-address-view {
  white-space: pre-wrap;
  p {
    margin-bottom: 0;
  }
  p:not(:first-child) {
    margin-top: 0;
  }
}

.schemaform-array-readonly-header {
  padding-bottom: 1.5rem;
}

.schemaform-prefill-message {
  margin-top: 0;
  margin-bottom: 1rem;
  min-height: auto;
}

.schemaform-process-sip {
  padding-bottom: 0;
}

.schemaform-sip-alert {
  margin-top: 0;
}

.schemaform-sip-alert-title {
  padding-bottom: 16px;
}

.schemaform-label-no-top-margin {
  > .schemaform-label {
    margin-top: 1rem;
  }
}

.schemaform-file-uploading {
  width: 100%;
}

.schemaform-review-array-warning {
  margin: -1em -0.8em 0;
  border: 2px solid $color-gold-lightest;
  > .form-review-panel-page-header-row {
    padding: 1em 0.8em;
    background-color: $color-gold-lightest;
  }
  > .va-growable-review {
    padding: 0 1em 1em 1em;
  }
}

.schemaform-review-array-warning-icon {
  background-image: url("~uswds/dist/img/alerts/warning.png");
  background-image: url("~uswds/dist/img/alerts/warning.svg");
  width: 2em;
  height: 1.4em;
  background-size: 2em;
  margin-right: 1em;
}

.schemaform-review-page-warning {
  margin: -1em -1em 5rem;
  .form-review-panel-page-header-row {
    padding: 1em 1em;
    background-color: $color-gold-lightest;
    &:after {
      display: block;
      order: 2;
      content: " ";
      background-image: url("~uswds/dist/img/alerts/warning.png");
      background-image: url("~uswds/dist/img/alerts/warning.svg");
      width: 2em;
      height: 1.3em;
      background-size: 2em;
      margin-right: 1em;
    }
    .edit-btn {
      order: 3;
    }
  }
  dl.review {
    padding: 0 1em;
    margin-top: 0;
    margin-bottom: 0;
    border-bottom: none;
  }
}

.schemaform-review-chapter-warning {
  .schemaform-chapter-accordion-header {
    position: relative;
    > .usa-button-unstyled {
      background-color: $color-gold-lightest;
    }
    .schemaform-review-chapter-warning-icon {
      position: absolute;
      top: 2.8rem;
      right: 4rem;
      display: block;
      background-image: url("~uswds/dist/img/alerts/warning.png");
      background-image: url("~uswds/dist/img/alerts/warning.svg");
      width: 2em;
      height: 1.2em;
      background-size: 1.8em;
      margin-right: 1em;
    }
  }
  .schemaform-chapter-accordion-content {
    border-right-color: $color-gold-lightest;
    border-left-color: $color-gold-lightest;
    border-bottom-color: $color-gold-lightest;
  }
}

#content .panel.saved-success-container {
  background-color: $color-green-lightest;
}

.saved-success-icon {
  margin: 0 .5em 0 0;
}

.usa-alert-no-color {
  background-color: transparent;
}
.usa-alert-mini {
  margin-top: 0;
  margin-bottom: 1em;
  background-size: 3rem;
  background-position: 1rem 2.2rem;
  > .usa-alert-body {
    padding-left: 3rem;
  }
  &::before {
    display: none;
  }
}

.expires-container {
  margin-top: 8px;
  margin-bottom: 8px;
}

.expires {
  font-weight: bold;
}

.saved-form-metadata-container {
  margin-bottom: 16px;
}
/* ... */

